		- added continuous contact constitutive law (Matteo Fancello)
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
	Bug fixes:
		- fix output file name ext. issue (noted by Jens van Schelve)
		- fix totalj rel. rot. priv data (noted by Jens van Schelve)

MBDyn 1.4.3
	Enhancements:
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
	Bug fixes:
		- fix build with RTAI support
		- fix build with g++ < 4.5 (noted by Reinhard Resch)

MBDyn 1.4.2
	Enhancements:
		- added simple hydraulic damper model (Giuseppe Quaranta)
		- added Hunt-Crossley impact model (Matteo Fancello)
		- added private data to generic aerodynamic force
		- added 'array' constitutive law wrapper
		- added generic 'bistop' constitutive law wrapper
		- added 'imu' and 'imu constraint' user-defined elements
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
	Bug fixes:
		- fix structural nodes accel output (Reinhard Resch)
		- fix variable mass body (noted by Francesco Castellini)
		- fix 'use binary' in modal joint
		- fix bug in deformable axial joint residual
		- fix driven aerodynamic elements (noted by Phil Geoghegan)
		- fix total(pin)joint when orientations are partially imposed
		- fix struct node accels during update (noted by Camille Yvin)
		- fix struct node accels computation when needed by plugins

MBDyn 1.4.1
	Enhancements:
		- log relative frame dummy nodes (Reinhard Resch)
		- log struct node momentum dofs (Reinhard Resch)
		- added support for octave (Reinhard Resch)
		- improved modal analysis output (Reinhard Resch)
		- added basic support for NREL airfoil data format
		- added airfoil "flip" capability
		- added referenceable template drive callers